<resources>
    <string name="app_name">EvilFriend</string>
    <string name="prompt_date">Создан: %1$s</string>
    <string name="prompt_date_tools">Создан: 20.01.70 09:37</string>
    <string name="prompt_title_tools">Продай квартиру</string>
    <string name="prompt_time_tools">14:00</string>
    <string name="fab_add_prompt">Добавление подсказки</string>
    <string name="prompt_title_edit_text_hint">О чем напомнить?</string>
    <string name="prompt_title_edit_text_helper">коротко и ясно</string>
    <string name="prompt_level_hint">Уровень важности</string>
    <string name="prompt_time">--:--</string>
    <string name="prompt_active">on|off</string>
    <string name="prompt_list_label">Список напоминаний</string>
    <string name="prompt_label">Напоминание</string>
    <string name="notification_channel_id">prompt_notification_channel</string>
    <string name="notification_channel">Prompt</string>
    <string name="notification_channel_description">Напоминания о нужном</string>
    <string name="notification_title">Напоминаю, что тебе нужно</string>
    <string name="active_tab_name">Активные</string>
    <string name="not_active_tab_name">Архив</string>
</resources>