<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.view.PromptListFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/active_tab_name"
            />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_active_tab_name"
            />
    </com.google.android.material.tabs.TabLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/prompt_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:name="com.example.helloapp.ItemFragment"
        app:layoutManager="LinearLayoutManager"
        tools:listitem="@layout/fragment_prompt_item"
        />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fab"
        android:backgroundTint="@color/secondaryColor"
        android:tint="@color/white"
        app:borderWidth="0dp"
        android:contentDescription="@string/fab_add_prompt"
        android:layout_gravity="end|bottom"
        android:src="@drawable/ic_baseline_add_24"
        android:layout_margin="@dimen/margin_large"/>
</FrameLayout>